platform/authentication/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-main
  namespace: authentication
spec:
  hostnames:
    - keycloak.serverton.de
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentication-keycloak
          port: 80
